--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,4 @@
 title: Ruth Mae Tubongbanua
 #logo: 
-description: Enthusiastic and detail-oriented Computer Science fresh graduate student with experience in UI/UX, backend
-development, software engineering, machine learning, and artificial intelligence. Keen to expand and apply the skills
-relevant to these fields to be adept in technology and creative solutions. A skilled communicator who builds strong working
-relationships with others.
+description: Enthusiastic and detail-oriented Computer Science fresh graduate student with experience in UI/UX, backend development, software engineering, machine learning, and artificial intelligence. Keen to expand and apply the skills relevant to these fields to be adept in technology and creative solutions. A skilled communicator who builds strong working relationships with others.
 theme: jekyll-theme-minimal
