--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Ruth Mae Tubongbanua
-logo: /assets/images/headshot.jpg
+logo: /assets/img/headshot.jpg 
 description: Enthusiastic and detail-oriented Computer Science fresh graduate student with experience in UI/UX, backend development, software engineering, machine learning, and artificial intelligence. Keen to expand and apply the skills relevant to these fields to be adept in technology and creative solutions. A skilled communicator who builds strong working relationships with others.
 theme: jekyll-theme-minimal
 
